Rename the home page

--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Zhen (Vincent) YUAN</title>
+        <title>Resume - BulletTech</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -51,9 +51,7 @@
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://mp.weixin.qq.com/s/YYZilgFSHrh-nrjF3Z2G7A"><i class="fab fa-weixin"></i></a>
                         <a class="social-icon" href="https://www.zhihu.com/people/bullettech"><i class="fab fa-zhihu"></i></a>
-                        <a class="social-icon" href="https://www.douyin.com/user/MS4wLjABAAAAPFvcvoD4PrSqrAvA1ehFu9S3OL-oKdCqH_V54POznMI?enter_from=main_page&enter_method=top_bar"><i class="fab fa-tiktok"></i></a>
-
-
+                        <a class="social-icon" href="https://www.douyin.com/user/MS4wLjABAAAAPFvcvoD4PrSqrAvA1ehFu9S3OL-oKdCqH_V54POznMI?"> <i class="fab fa-tiktok"></i></a>
 
                         </div>
                 </div>
