--- a/home/index.html
+++ b/home/index.html
@@ -45,7 +45,7 @@
                     <div class="subheading mb-5">
                         Shanghai · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
                     </div>
-                    <p class="lead mb-5">所有内容都有益身心健康，欢迎每天品尝。</p>
+                    <p class="lead mb-5">所有内容都有益身心健康，欢迎每天品尝。欢迎点击下列图标查看我们在不同平台的服务和内容！</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://bullettech.cn/"><i class="fas fa-rocket"></i></a>
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
@@ -63,7 +63,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">联合创始人</h3>
+                            <h3 class="mb-0">联合创始人 & CEO</h3>
                             <div class="subheading mb-3">BulletTech</div>
                             <ul class="fa-ul mb-0">
                                 <li>
