Amend the tiktok link

--- a/home/index.html
+++ b/home/index.html
@@ -51,7 +51,7 @@
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://mp.weixin.qq.com/s/YYZilgFSHrh-nrjF3Z2G7A"><i class="fab fa-weixin"></i></a>
                         <a class="social-icon" href="https://www.zhihu.com/people/bullettech"><i class="fab fa-zhihu"></i></a>
-                        <a class="social-icon" href="https://www.douyin.com/user/MS4wLjABAAAAPFvcvoD4PrSqrAvA1ehFu9S3OL-oKdCqH_V54POznMI?"> <i class="fab fa-tiktok"></i></a>
+                        <a class="social-icon" href="https://www.douyin.com/user/MS4wLjABAAAAPFvcvoD4PrSqrAvA1ehFu9S3OL-oKdCqH_V54POznMI"> <i class="fab fa-tiktok"></i></a>
 
                         </div>
                 </div>
