--- a/home/index.html
+++ b/home/index.html
@@ -45,7 +45,7 @@
                     <div class="subheading mb-5">
                         Shanghai · China · <a href="mailto:name@email.com">BulletTech2021@163.com</a>
                     </div>
-                    <p class="lead mb-5">所有内容都有益身心健康，欢迎每天品尝。欢迎点击下列图标查看我们在不同平台的服务和内容！</p>
+                    <p class="lead mb-5">卡hi哦方法书法家打算来解答解答考生都爱就啊啥的就撒了多久啊善良的</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://bullettech.cn/"><i class="fas fa-rocket"></i></a>
                         <a class="social-icon" href="https://bullettech.github.io/BulletTech/"><i class="fab fa-github"></i></a>
